<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/custom_address_relative_layout"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <!--Address 1-->
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_text_address_line1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/address_1"
        android:padding="10dp" />

    <!--Address 2-->
    <android.support.v7.widget.AppCompatEditText
        android:id="@+id/edit_text_address_line2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="8dp"
        android:background="@drawable/custom_edit_text"
        android:hint="@string/address_2"
        android:padding="10dp" />

    <!--City, State, Zip-->
    <LinearLayout
        android:id="@+id/second_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="100">

        <!--City-->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_address_city"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="38"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/city"
            android:inputType="textCapWords|textAutoCorrect"
            android:padding="10dp" />
        <!--State-->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_address_state"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="38"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/state"
            android:inputType="textCapCharacters|textAutoCorrect"
            android:padding="10dp" />

        <!--Zip-->
        <android.support.v7.widget.AppCompatEditText
            android:id="@+id/edit_text_address_zip"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:layout_weight="24"
            android:background="@drawable/custom_edit_text"
            android:hint="@string/zip"
            android:inputType="textPostalAddress"
            android:padding="10dp" />

    </LinearLayout>
</LinearLayout>
