<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">
    <ImageView
        android:id="@+id/property_item_picture"
        android:layout_width="90dp"
        android:layout_height="90dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:background="@android:drawable/ic_menu_gallery"
        android:contentDescription="This is an description of the property" />
    <TextView
        android:id="@+id/property_item_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toEndOf="@id/property_item_picture"
        app:layout_constraintTop_toTopOf="parent"
        tools:text="@string/item_name"
        android:textStyle="bold"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:layout_marginStart="16dp"
        android:layout_marginTop="8dp" />
    <TextView
        android:id="@+id/property_item_location"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/property_item_type"
        app:layout_constraintStart_toStartOf="@id/property_item_type"
        tools:text="@string/item_location"
        android:layout_marginTop="2dp"/>
    <TextView
        android:id="@+id/property_item_price"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/property_item_location"
        app:layout_constraintStart_toStartOf="@id/property_item_location"
        android:layout_marginTop="2dp"
        tools:text="@string/item_price"
        android:textSize="20sp"
        android:textColor="@color/colorAccent"/>

    <android.support.v7.widget.AppCompatCheckBox
        android:id="@+id/property_item_checkbox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        android:visibility="gone" />

</android.support.constraint.ConstraintLayout>